--- a/abbreviations.tex
+++ b/abbreviations.tex
@@ -55,7 +55,11 @@
 \newcommand{\GheishaOld}{{\scshape Gheisha\,600}\xspace}
 \newcommand{\Gheisha}{{\scshape Gheisha}\xspace}
 \newcommand{\Corsika}{{\scshape Corsika}\xspace}
+\newcommand{\Conex}{{\scshape Conex}\xspace}
+\newcommand{\Seneca}{{\scshape Seneca}\xspace}
 \newcommand{\CRMC}{{\scshape CRMC}\xspace}
+\newcommand{\Mooca}{{\scshape Mooca}\xspace}
+\newcommand{\Aires}{{\scshape Aires}\xspace}
 \newcommand{\Venus}{{\scshape Venus}\xspace}
 \newcommand{\VenusLong}{{\scshape Venus\,4.12}\xspace}
 \newcommand{\GiBUU}{{\scshape GiBUU}\xspace}
