--- a/bib_aliases.tex
+++ b/bib_aliases.tex
@@ -1,31 +1,40 @@
 %aliases for bib entries
+
+%%EXPERIMENTS
 \def\NASixtyOnePaper{Abgrall:2014xwa} 
 \def\NAFortyNinePaper{Afanasev:1999iu}
 \def\T2KPaper{Abe:2011ks}
-\def\RhoPaper{Aduszkiewicz:2017anm}
+\def\AlicePaper{Aamodt:2008zz}
+\def\CMSPaper{Chatrchyan:2008aa}
+\def\AugerPaper{ThePierreAuger:2015rma}
+
+
+%%MODELS
 \def\QGSJetPaper{Ostapchenko:2010vb}
 \def\DPMJetPaper{Roesler:2000he}
 \def\EposPaper{Pierog:2006qv}
 \def\EposLHCPaper{Pierog:2013ria}
 \def\SibyllPaper{Ahn:2009wx}
 \def\NewSibyllPaper{Riehn:2015oba}
-\def\APP16{Prado:2016akv}
-\def\APP17{Prado:2017ijs}
-\def\AlicePaper{Aamodt:2008zz}
-\def\CMSPaper{Chatrchyan:2008aa}
-\def\IoanaICRC{IoanaICRC2009}
-\def\MichaelICRC{UngerICRC2011}
-\def\HansICRC{HansICRC2013}
-\def\AlexICRC{Herve:2015lra}
-\def\RaulICRC{Prado:2017hub}
-\def\PDGPaper{Patrignani:2016xqp}  
+\def\UrqmdPaper{Bleicher:1999xi}
+\def\FlukaPaper{Ferrari:2005zk}
 
-\def\AugerPaper{ThePierreAuger:2015rma}
+%%SOFTWARES
+\def\MoocaPaper{Hillas:1997tf}
+\def\AiresPaper{Sciutto:1999jh}
+\def\CorsikaPaper{Heck:1998vt}
+\def\ConexPaper{Bergmann:2006yz}
+\def\SenecaPaper{Drescher:2002cr}
+
+
+%%CR RESULTS
 \def\AugerHASMuonPaper{Aab:2014pza}
 \def\AugerMPDPaper{Aab:2014dua}
 \def\AugerTopDownPaper{Aab:2016hkv}
 \def\AugerXmaxPRDPaper{Aab:2014kda}
 \def\AugerXmaxICRC2017Paper{Bellido:2017cgf}
+\def\AugerAsymmetryPaper{Aab:2016enk}
+\def\AugerDeltaPaper{Aab:2017cgk}
 \def\TAXmaxPaper{Jui:2011vm}
 \def\HiResPaper{AbuZayyad:2000uu}
 \def\FlysEyesPaper{Baltrusaitis:1985mx}
@@ -39,5 +48,21 @@
 \def\YakutskXmaxPaper{Knurenko:2011zz}
 \def\YakutskPaper{Knurenko:2010eu}
 \def\CasaBlancaXmaxPaper{Fowler:2000si}
+
+
+%%NA61
+\def\RhoPaper{Aduszkiewicz:2017anm}
+
+
+%%OTHERS
+\def\APP16{Prado:2016akv}
+\def\APP17{Prado:2017ijs}
+\def\IoanaICRC{IoanaICRC2009}
+\def\MichaelICRC{UngerICRC2011}
+\def\HansICRC{HansICRC2013}
+\def\AlexICRC{Herve:2015lra}
+\def\RaulICRC{Prado:2017hub}
+\def\PDGPaper{Patrignani:2016xqp}  
+
 
 
