--- a/lib.bib
+++ b/lib.bib
@@ -2,6 +2,290 @@
 %%%%%%%% PAPERS %%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%
 
+@article{Maris:2009uc,
+      author         = "Maris, Ioana C. and Engel, R. and Garrido, X. and Haungs,
+                        A. and Roth, M. and Ulrich, R. and Unger, M.",
+      title          = "{Influence of Low Energy Hadronic Interactions on
+                        Air-shower Simulations}",
+      booktitle      = "{Proceedings, 15th International Symposium on Very High
+                        Energy Cosmic Ray Interactions (ISVHECRI 2008): Paris,
+                        France, September 1-6, 2008}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "196",
+      year           = "2009",
+      pages          = "86-89",
+      doi            = "10.1016/j.nuclphysbps.2009.09.013",
+      eprint         = "0907.0409",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.CO",
+      SLACcitation   = "%%CITATION = ARXIV:0907.0409;%%"
+}
+
+@article{Gribov1968,
+author = {Gribov, V.N.},
+journal = {Sov.Phys.JETP},
+number = {2},
+pages = {414--422},
+title = {{A Reggeon Diagram Technique}},
+volume = {26},
+year = {1968}
+}
+
+
+@article{Gheisha1985,
+      author         = "Fesefeldt, H. C.",
+      title          = "{Simulation of hadronic showers, physics and applications}",
+      year           = "1985",
+      reportNumber   = "PITHA 85/02"
+}
+
+
+
+@article{Drescher:2000ha,
+      author         = "Drescher, H. J. and Hladik, M. and Ostapchenko, S. and
+                        Pierog, T. and Werner, K.",
+      title          = "{Parton based Gribov-Regge theory}",
+      journal        = "Phys. Rept.",
+      volume         = "350",
+      year           = "2001",
+      pages          = "93-289",
+      doi            = "10.1016/S0370-1573(00)00122-8",
+      eprint         = "hep-ph/0007198",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SUBATECH-00-06",
+      SLACcitation   = "%%CITATION = HEP-PH/0007198;%%"
+}
+
+
+@article{Ferrari:2005zk,
+      author         = "Ferrari, Alfredo and Sala, Paola R. and Fasso, Alberto
+                        and Ranft, Johannes",
+      title          = "{FLUKA: A multi-particle transport code (Program version
+                        2005)}",
+      year           = "2005",
+      reportNumber   = "CERN-2005-010, SLAC-R-773, INFN-TC-05-11",
+      SLACcitation   = "%%CITATION = CERN-2005-010;%%"
+}
+
+@article{Bleicher:1999xi,
+      author         = "Bleicher, M. and others",
+      title          = "{Relativistic hadron hadron collisions in the
+                        ultrarelativistic quantum molecular dynamics model}",
+      journal        = "J. Phys.",
+      volume         = "G25",
+      year           = "1999",
+      pages          = "1859-1896",
+      doi            = "10.1088/0954-3899/25/9/308",
+      eprint         = "hep-ph/9909407",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = HEP-PH/9909407;%%"
+}
+
+@article{Heck:2004rq,
+      author         = "Heck, Dieter",
+      title          = "{Low energy hadronic interaction models}",
+      booktitle      = "{Proceedings, 13th International Symposium on Very
+                        High-Energy Cosmic Ray Interactions (ISVHECRI 2004):
+                        Pylos, Greece, September 6-12, 2004}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "151",
+      year           = "2006",
+      pages          = "127-134",
+      doi            = "10.1016/j.nuclphysbps.2005.07.024",
+      eprint         = "astro-ph/0410735",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0410735;%%"
+}
+
+@article{Stokes:2011wf,
+      author         = "Stokes, B. T. and Cady, R. and Ivanov, D. and Matthews,
+                        J. N. and Thomson, G. B.",
+      title          = "{Dethinning Extensive Air Shower Simulations}",
+      journal        = "Astropart. Phys.",
+      volume         = "35",
+      year           = "2012",
+      pages          = "759-766",
+      doi            = "10.1016/j.astropartphys.2012.03.004",
+      eprint         = "1104.3182",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.IM",
+      SLACcitation   = "%%CITATION = ARXIV:1104.3182;%%"
+}
+
+@article{Bossard:2000jh,
+      author         = "Bossard, G. and Drescher, H. J. and Kalmykov, N. N. and
+                        Ostapchenko, S. and Pavlov, A. I. and Pierog, T. and
+                        Vishnevskaya, E. A. and Werner, K.",
+      title          = "{Cosmic ray air shower characteristics in the framework
+                        of the parton based Gribov-Regge model NEXUS}",
+      journal        = "Phys. Rev.",
+      volume         = "D63",
+      year           = "2001",
+      pages          = "054030",
+      doi            = "10.1103/PhysRevD.63.054030",
+      eprint         = "hep-ph/0009119",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "SUBATECH-00-13",
+      SLACcitation   = "%%CITATION = HEP-PH/0009119;%%"
+}
+
+@article{Drescher:2002cr,
+      author         = "Drescher, Hans-Joachim and Farrar, Glennys R.",
+      title          = "{Air shower simulations in a hybrid approach using
+                        cascade equations}",
+      journal        = "Phys. Rev.",
+      volume         = "D67",
+      year           = "2003",
+      pages          = "116001",
+      doi            = "10.1103/PhysRevD.67.116001",
+      eprint         = "astro-ph/0212018",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0212018;%%"
+}
+
+@article{Pierog:2015ifw,
+      author         = "Pierog, Tanguy and Guiot, Benjamin and Werner, Klaus",
+      title          = "{Air Shower Development, pion interactions and modified
+                        EPOS Model}",
+      booktitle      = "{Proceedings, 34th International Cosmic Ray Conference
+                        (ICRC 2015): The Hague, The Netherlands, July 30-August 6,
+                        2015}",
+      journal        = "PoS",
+      volume         = "ICRC2015",
+      year           = "2016",
+      pages          = "337",
+      SLACcitation   = "%%CITATION = POSCI,ICRC2015,337;%%"
+}
+
+@article{Ostapchenko:2016bir,
+      author         = "Ostapchenko, Sergey and Bleicher, Marcus",
+      title          = "{Constraining pion interactions at very high energies by
+                        cosmic ray data}",
+      journal        = "Phys. Rev.",
+      volume         = "D93",
+      year           = "2016",
+      number         = "5",
+      pages          = "051501",
+      doi            = "10.1103/PhysRevD.93.051501",
+      eprint         = "1601.06567",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1601.06567;%%"
+}
+
+@article{Bergmann:2006yz,
+      author         = "Bergmann, Till and Engel, R. and Heck, D. and Kalmykov,
+                        N. N. and Ostapchenko, Sergey and Pierog, T. and Thouw, T.
+                        and Werner, K.",
+      title          = "{One-dimensional Hybrid Approach to Extensive Air Shower
+                        Simulation}",
+      journal        = "Astropart. Phys.",
+      volume         = "26",
+      year           = "2007",
+      pages          = "420-432",
+      doi            = "10.1016/j.astropartphys.2006.08.005",
+      eprint         = "astro-ph/0606564",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/0606564;%%"
+}
+
+@article{Heck:1998vt,
+      author         = "Heck, D. and Schatz, G. and Thouw, T. and Knapp, J. and
+                        Capdevielle, J. N.",
+      title          = "{CORSIKA: A Monte Carlo code to simulate extensive air
+                        showers}",
+      year           = "1998",
+      reportNumber   = "FZKA-6019",
+      SLACcitation   = "%%CITATION = FZKA-6019;%%"
+}
+
+@article{Sciutto:1999jh,
+      author         = "Sciutto, S. J.",
+      title          = "{AIRES: A System for air shower simulations. User's guide
+                        and reference manual. Version 2.2.0}",
+      year           = "1999",
+      eprint         = "astro-ph/9911331",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph",
+      SLACcitation   = "%%CITATION = ASTRO-PH/9911331;%%"
+}
+
+@article{Hillas:1997tf,
+      author         = "Hillas, A. M.",
+      title          = "{Shower simulation: Lessons from MOCCA}",
+      booktitle      = "{Proceedings, 9th International Symposium on Very High
+                        Energy Cosmic Ray Interactions (ISVHECRI 1996): Karlsruhe,
+                        Germany, August 19-23, 1996}",
+      journal        = "Nucl. Phys. Proc. Suppl.",
+      volume         = "52B",
+      year           = "1997",
+      pages          = "29-42",
+      doi            = "10.1016/S0920-5632(96)00847-X",
+      note           = "[,29(1997)]",
+      SLACcitation   = "%%CITATION = NUPHZ,52B,29;%%"
+}
+
+@article{Allen:2013ofa,
+      author         = "Allen, J. and others",
+      title          = "{Air Shower Simulation and Hadronic Interactions}",
+      booktitle      = "{Proceedings,  International Symposium on Future
+                        Directions in UHECR Physics (UHECR2012): CERN, Geneva,
+                        Switzerland, February 13-16, 2012}",
+      journal        = "EPJ Web Conf.",
+      volume         = "53",
+      year           = "2013",
+      pages          = "01007",
+      doi            = "10.1051/epjconf/20135301007",
+      eprint         = "1306.6090",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      SLACcitation   = "%%CITATION = ARXIV:1306.6090;%%"
+}
+
+@article{Aab:2017cgk,
+      author         = "Aab, Alexander and others",
+      title          = "{Inferences on mass composition and tests of hadronic
+                        interactions from 0.3 to 100 EeV using the
+                        water-Cherenkov detectors of the Pierre Auger
+                        Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "Phys. Rev.",
+      volume         = "D96",
+      year           = "2017",
+      number         = "12",
+      pages          = "122003",
+      doi            = "10.1103/PhysRevD.96.122003",
+      eprint         = "1710.07249",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-17-357",
+      SLACcitation   = "%%CITATION = ARXIV:1710.07249;%%"
+}
+
+@article{Aab:2016enk,
+      author         = "Aab, Alexander and others",
+      title          = "{Azimuthal Asymmetry in the Risetime of the Surface
+                        Detector Signals of the Pierre Auger Observatory}",
+      collaboration  = "Pierre Auger",
+      journal        = "Phys. Rev.",
+      volume         = "D93",
+      year           = "2016",
+      number         = "7",
+      pages          = "072006",
+      doi            = "10.1103/PhysRevD.93.072006",
+      eprint         = "1604.00978",
+      archivePrefix  = "arXiv",
+      primaryClass   = "astro-ph.HE",
+      reportNumber   = "FERMILAB-PUB-16-094-AD-AE-CD-TD",
+      SLACcitation   = "%%CITATION = ARXIV:1604.00978;%%"
+}
+
 @inproceedings{Bellido:2017cgf,
       author         = "Bellido, Jose",
       title          = "{Depth of maximum of air-shower profiles at the Pierre
@@ -975,6 +1259,16 @@
       archivePrefix  = "arXiv",
       primaryClass   = "hep-ex",
       SLACcitation   = "%%CITATION = ARXIV:1707.07902;%%"
+}
+
+
+@inproceedings{TAComp2017,
+      author         = "Hanlon, W. and Ikedab, D. and Lundquista, J. P. and Stromana, T. and Zhezherc, T.",
+      title          = "{Telescope Array Composition Summary}",
+      booktitle      = "{Proceedings,  35th International Cosmic Ray Conference
+                        (ICRC 2017): Bexco, Busan, Korea, July 12-20, 2017}",
+      collaboration  = "Telescope Array",
+      year           = "2017"
 }
 
 @inproceedings{IoanaICRC2009,
